# ansible-role-tripleo-tempest-undercloud

./: .gitreview  README.md  groups  project.config  setup.cfg
defaults/: main.yml
handlers/: main.yml
tasks/: main.yml
templates/: configure-tempest.j2  tempest-setup.j2
tests/: test.yml
vars/: main.yml
