[metadata]
name = ansible-role-tripleo-tempest-undercloud
summary = ansible-role-tripleo-tempest-undercloud - An Ansible role for validating a TripleO undercloud with tempest
description-file =
    README.md
author = RDO-CI Team
author-email = trown@redhat.com, mbultel@redhat.com, whayutin@redhat.com, harry@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-tempest-undercloud
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible-role-tripleo-tempest-undercloud/defaults = ../ansible-role-tripleo-tempest-undercloud/defaults/*
    usr/local/share/ansible-role-tripleo-tempest-undercloud/files = ../ansible-role-tripleo-tempest-undercloud/files/*
    usr/local/share/ansible-role-tripleo-tempest-undercloud/handlers = ../ansible-role-tripleo-tempest-undercloud/handlers/*
    usr/local/share/ansible-role-tripleo-tempest-undercloud/meta = ../ansible-role-tripleo-tempest-undercloud/meta/*
    usr/local/share/ansible-role-tripleo-tempest-undercloud/tasks = ../ansible-role-tripleo-tempest-undercloud/tasks/*
    usr/local/share/ansible-role-tripleo-tempest-undercloud/templates = ../ansible-role-tripleo-tempest-undercloud/templates/*
    usr/local/share/ansible-role-tripleo-tempest-undercloud/tests = ../ansible-role-tripleo-tempest-undercloud/tests/*
    usr/local/share/ansible-role-tripleo-tempest-undercloud/vars = ../ansible-role-tripleo-tempest-undercloud/vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
